@@ -47,6 +47,7 @@ our $VERSION = '2.27';
 our @EXPORT = qw(
     $already_splashed
     $changelog_first_config
+    $filter
     $dont_show_selections
     $mandrakeupdate_wanted_categories
     $max_info_in_descr
@@ -147,7 +148,7 @@ my ($root) = grep { $_->[2] == 0 } list_passwd();
 $ENV{HOME} = $> == 0 ? $root->[7] : $ENV{HOME} || '/root';
 
 our $configfile = "$ENV{HOME}/.rpmdrake";
-our ($already_splashed, $changelog_first_config, $max_info_in_descr, $tree_flat, $tree_mode);
+our ($already_splashed, $changelog_first_config, $filter, $max_info_in_descr, $tree_flat, $tree_mode);
 our ($mandrakeupdate_wanted_categories, $offered_to_add_sources, $no_confirmation);
 our %config = (
     mandrakeupdate_wanted_categories => { var => \$mandrakeupdate_wanted_categories, default => [ qw(security) ] },
@@ -159,6 +160,7 @@ our %config = (
     tree_flat => { var => \$tree_flat, default => [ 0 ] },
     changelog_first_config => { var => \$changelog_first_config, default => [ 0 ] },
     'no-confirmation' => { var => \$no_confirmation, default => [ 0 ] },
+    filter => { var => \$filter, default => [ 'all' ] },
 );
 
 sub readconf() {
