@@ -1,3 +1,5 @@
+- split filters (all, installed, non installed) from views (GUI, meta
+  packages, updates, ...)
 - update GUI package list
 
 Version 4.6.2 - 14 March 2008, Thierry Vignaud
